--- a/web/src/index.css
+++ b/web/src/index.css
@@ -13,3 +13,19 @@
   width: 100vw;
   height: 100vh;
 }
+
+::-webkit-scrollbar {
+  width: 2px;
+}
+
+::-webkit-scrollbar-track {
+  background: #25262b;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #909296;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #a6a7ab;
+}
