fix(web): resolve dead font cdn link

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,4 +1,4 @@
-@import url(https://use.typekit.net/wxh5ury.css);
+@import url('https://use.typekit.net/qgr5ebd.css');
 
 @tailwind base;
 @tailwind components;
